--- a/.env.template
+++ b/.env.template
@@ -1,8 +1,3 @@
-TELEGRAM_BOT_TOKEN=
-TELEGRAM_BOT_USERNAME=
-
-NGROK_AUTH_TOKEN=
-NGROK_REGION=
-
-RAPPO_ENV=
-HOST_URL=
+MGOB_EXTERNAL_PORT=8090
+MONGO_EXPRESS_EXTERNAL_PORT=8081
+RASA_EXTERNAL_DEBUG_PORT=5005
