--- a/docker-compose.base.yml
+++ b/docker-compose.base.yml
@@ -7,7 +7,7 @@ services:
   mongo-express:
     image: mongo-express
     ports:
-      - 8081:8081
+      - ${MONGO_EXPRESS_EXTERNAL_PORT}:8081
     depends_on:
       - mongo
   rasa:
