Updating bot name

--- a/.deploy/nginx/docker-compose.yml
+++ b/.deploy/nginx/docker-compose.yml
@@ -12,7 +12,7 @@ services:
       - "80:80"
       - "443:443"
     networks:
-      - rasa-bot-template_default
+      - landerbot-admin_default
     command: "/bin/sh -c 'while :; do sleep 6h & wait $${!}; nginx -s reload; done & nginx -g \"daemon off;\"'"
   certbot:
     image: certbot/certbot
@@ -22,5 +22,5 @@ services:
       - ./data/certbot/www:/var/www/certbot
     entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
 networks:
-  rasa-bot-template_default:
+  landerbot-admin_default:
     external: true
