moving rasa-admin network alias to docker-compose base

--- a/docker-compose.base.yml
+++ b/docker-compose.base.yml
@@ -17,5 +17,9 @@ services:
     command: ""
     depends_on:
       - mongo
+    networks:
+      default:
+        aliases:
+          - rasa-admin
 volumes:
   mongodb:
