Updating nginx conf

--- a/.deploy/nginx/.env.template
+++ b/.deploy/nginx/.env.template
@@ -1,3 +1,7 @@
-NGINX_PROXY_PASS=http://rasa:5005
+NGINX_ADMIN_PROXY_PASS=http://rasa-admin:5005
+NGINX_CLIENT_PROXY_PASS=http://rasa-client:5005
+NGINX_ADMIN_DOMAIN=admin.landerbot.rappo.ai
+NGINX_CLIENT_DOMAIN=client.landerbot.rappo.ai
+NGINX_DOMAIN_LIST="admin.landerbot.rappo.ai client.landerbot.rappo.ai"
+LETSENCRYPT_EMAIL=support@rappo.ai
 LETSENCRYPT_STAGING=1
-NGINX_DOMAIN_LIST=
