--- a/.deploy/nginx/templates/nginx/app.conf.template
+++ b/.deploy/nginx/templates/nginx/app.conf.template
@@ -14,7 +14,7 @@ server {
 
 server {
     listen 443 ssl;
-    server_name ${NGINX_DOMAIN_LIST};
+    server_name ${NGINX_ADMIN_DOMAIN};
     server_tokens off;
 
     ssl_certificate /etc/letsencrypt/live/${NGINX_PRIMARY_DOMAIN}/fullchain.pem;
@@ -23,7 +23,25 @@ server {
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
     location / {
-        proxy_pass  ${NGINX_PROXY_PASS};
+        proxy_pass  ${NGINX_ADMIN_PROXY_PASS};
+        proxy_set_header    Host                $http_host;
+        proxy_set_header    X-Real-IP           $remote_addr;
+        proxy_set_header    X-Forwarded-For     $proxy_add_x_forwarded_for;
+    }
+}
+
+server {
+    listen 443 ssl;
+    server_name ${NGINX_CLIENT_DOMAIN};
+    server_tokens off;
+
+    ssl_certificate /etc/letsencrypt/live/${NGINX_PRIMARY_DOMAIN}/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/${NGINX_PRIMARY_DOMAIN}/privkey.pem;
+    include /etc/letsencrypt/options-ssl-nginx.conf;
+    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+
+    location / {
+        proxy_pass  ${NGINX_CLIENT_PROXY_PASS};
         proxy_set_header    Host                $http_host;
         proxy_set_header    X-Real-IP           $remote_addr;
         proxy_set_header    X-Forwarded-For     $proxy_add_x_forwarded_for;
