BUGFIX support for nginx CORS client origin

--- a/.deploy/nginx/.env.template
+++ b/.deploy/nginx/.env.template
@@ -5,3 +5,4 @@ NGINX_CLIENT_DOMAIN=client.landerbot.rappo.ai
 NGINX_DOMAIN_LIST="admin.landerbot.rappo.ai client.landerbot.rappo.ai"
 LETSENCRYPT_EMAIL=support@rappo.ai
 LETSENCRYPT_STAGING=1
+ALLOWED_CLIENT_ORIGINS=https://landerbot.rappo.ai
