BUGFIX CORS allowing all headers

--- a/.deploy/nginx/templates/nginx/app.conf.template
+++ b/.deploy/nginx/templates/nginx/app.conf.template
@@ -41,6 +41,7 @@ server {
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
     add_header 'Access-Control-Allow-Origin' '${ALLOWED_CLIENT_ORIGINS}';
+    add_header 'Access-Control-Allow-Headers' '*';
 
     location / {
         proxy_pass  ${NGINX_CLIENT_PROXY_PASS};
