--- a/dataset/domain.yml
+++ b/dataset/domain.yml
@@ -10,6 +10,20 @@ actions:
   - action_livechat_reply
   - action_livechat_scroll
 
+  - action_ask_newbot__name
+  - action_on_newbot_form_done
+  - action_reset_newbot_form
+  - validate_newbot_form
+
+forms:
+  newbot_form:
+    ignored_intents:
+    required_slots:
+      newbot__name:
+        - type: from_text
+      newbot__platform:
+        - type: from_text
+
 session_config:
   session_expiration_time: 60
   carry_over_slots_to_new_session: true
@@ -25,3 +39,9 @@ slots:
     type: text
   telegram_user_id:
     type: text
+  newbot__name:
+    type: text
+  newbot__platform:
+    type: categorical
+    values:
+      - Web
