Multiple enhancements - emojis for live, open, online - num sessions - user id hashtag in messages for easy searching - new incoming live user message should be short - event when widget is opened / closed - show widget open / close status - fix referrer becoming blank - show user city - show multi-turns in a single message; scroll only if needed - show user online / offline status in message thread - store user online / offline status

--- a/dataset/domain.yml
+++ b/dataset/domain.yml
@@ -7,6 +7,7 @@ actions:
   - action_command_groupid
   - action_command_resetdb
   - action_livechat_message
+  - action_livechat_refresh
   - action_livechat_reply
   - action_livechat_scroll
 
